# lms-minesweeper

./: .gitignore  CREDITS.md  README.md  TODO.md  package.json  pnpm-lock.yaml
src/: App.css  App.tsx  main.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  scaling.rs
src/components/: Board.css  Board.tsx  Cell.css  Cell.tsx  Minesweeper.css  Minesweeper.tsx
src/contexts/: TranslationContext.tsx
src/locales/: en.json  es.json
src/types/: minesweeper.ts
src/utils/: gameLogic.ts
