[package]
name = "lms-minesweeper-tauri"
version = "1.0.0"
description = "A Minesweeper game built with Tauri"
authors = ["Leonardo Manrique"]
edition = "2021"

[lib]
name = "lms_minesweeper_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sys-locale = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
dirs = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
